--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "site-lisp/helm-ls-git"]
 	path = site-lisp/helm-ls-git
 	url = git@github.com:emacs-helm/helm-ls-git.git
+[submodule "site-lisp/scss-mode"]
+	path = site-lisp/scss-mode
+	url = git@github.com:antonj/scss-mode.git
