--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "site-lisp/emacs-async"]
 	path = site-lisp/emacs-async
 	url = https://github.com/jwiegley/emacs-async.git
+[submodule "site-lisp/evil-magit"]
+	path = site-lisp/evil-magit
+	url = git@github.com:justbur/evil-magit.git
