--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,12 @@
 [submodule "site-lisp/smartrep"]
 	path = site-lisp/smartrep
 	url = git@github.com:myuhe/smartrep.el.git
+[submodule "site-lisp/evil-cleverparens"]
+	path = site-lisp/evil-cleverparens
+	url = git@github.com:luxbock/evil-cleverparens.git
+[submodule "site-lisp/evil-smartparens"]
+	path = site-lisp/evil-smartparens
+	url = git@github.com:expez/evil-smartparens.git
+[submodule "site-lisp/smartparens"]
+	path = site-lisp/smartparens
+	url = git@github.com:Fuco1/smartparens.git
